# talkback-bootstrap

./: README.md  pyproject.toml
src/talkback/: __init__.py  exceptions.py  initiator.py  settings.py  utils.py
tests/: test_initiator.py
